# sockets_test

./: .gitignore  CMakeLists.txt  data.cpp  data.h  main.cpp  pipe.cpp  pipe.h  udp_client_server.cpp  udp_client_server.h
serializer/: serializer.h  serializer_string.cpp  serializer_string.h  serializer_vector.h
